api_versioned_docs/version-12.0.1/avalonia/input/gesturerecognizers/scrollgesturerecognizer.mdx
---
title: 'ScrollGestureRecognizer'
hide_title: true
slug: '/avalonia/input/gesturerecognizers/scrollgesturerecognizer'
uid: 'Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer'
commentId: 'T:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Input.GestureRecognizers'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">ScrollGestureRecognizer Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Input.GestureRecognizers</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class ScrollGestureRecognizer
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../animation/animatable">Animatable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../styledelement">StyledElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="gesturerecognizer">GestureRecognizer</a> <span className="apiref-page__relation-separator">-&gt;</span> ScrollGestureRecognizer
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [ScrollGestureRecognizer](#uid-f1de5857b2) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-f1de5857b2"></span>

### ScrollGestureRecognizer Constructor

```csharp
public ScrollGestureRecognizer()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [ApplyStyling](../../styledelement.mdx#uid-b0f81a6f8f) | Applies styling to the control if the control is initialized and styling is not already applied. Inherited from [StyledElement](../../styledelement.mdx). |
| [BeginInit](../../styledelement.mdx#uid-91c6ccadce) | Inherited from [StyledElement](../../styledelement.mdx). |
| [EndInit](../../styledelement.mdx#uid-17b450469d) | Inherited from [StyledElement](../../styledelement.mdx). |
| [TryGetResource](../../styledelement.mdx#uid-2046a6b284) | Inherited from [StyledElement](../../styledelement.mdx). |
| [Bind (8 overloads)](../../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [CheckAccess](../../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [CoerceValue](../../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [Equals](../../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [GetBaseValue](../../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [GetHashCode](../../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [IsAnimating](../../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [IsSet](../../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [VerifyAccess](../../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [CanHorizontallyScroll](#uid-ae5de60c49) | Gets or sets a value indicating whether the content can be scrolled horizontally. |
| [CanVerticallyScroll](#uid-5b5a26fdfa) | Gets or sets a value indicating whether the content can be scrolled vertically. |
| [IsScrollInertiaEnabled](#uid-543f53394e) | Gets or sets whether the gesture should include inertia in it's behavior. |
| [ScrollStartDistance](#uid-2fd9b73f38) | Gets or sets a value indicating the distance the pointer moves before scrolling is started |
| [ActualThemeVariant](../../styledelement.mdx#uid-776bcbe4bf) | Gets the UI theme that is currently used by the element, which might be different than the RequestedThemeVariantProperty. Inherited from [StyledElement](../../styledelement.mdx). |
| [Classes](../../styledelement.mdx#uid-b7b7edea05) | Gets or sets the styled element's classes. Inherited from [StyledElement](../../styledelement.mdx). |
| [DataContext](../../styledelement.mdx#uid-647f924a56) | Gets or sets the control's data context. Inherited from [StyledElement](../../styledelement.mdx). |
| [IsInitialized](../../styledelement.mdx#uid-59a7cddacb) | Gets a value that indicates whether the element has finished initialization. Inherited from [StyledElement](../../styledelement.mdx). |
| [Name](../../styledelement.mdx#uid-245f4ccff5) | Gets or sets the name of the styled element. Inherited from [StyledElement](../../styledelement.mdx). |
| [Parent](../../styledelement.mdx#uid-aad2c5c78d) | Gets the styled element's logical parent. Inherited from [StyledElement](../../styledelement.mdx). |
| [Resources](../../styledelement.mdx#uid-f6488ca4b7) | Gets or sets the styled element's resource dictionary. Inherited from [StyledElement](../../styledelement.mdx). |
| [StyleKey](../../styledelement.mdx#uid-081584075e) | Gets the type by which the element is styled. Inherited from [StyledElement](../../styledelement.mdx). |
| [Styles](../../styledelement.mdx#uid-ae663139cc) | Gets the styles for the styled element. Inherited from [StyledElement](../../styledelement.mdx). |
| [TemplatedParent](../../styledelement.mdx#uid-dbf6ddacc3) | Gets the styled element whose lookless template this styled element is part of. Inherited from [StyledElement](../../styledelement.mdx). |
| [Theme](../../styledelement.mdx#uid-1aebed283d) | Gets or sets the theme to be applied to the element. Inherited from [StyledElement](../../styledelement.mdx). |
| [Transitions](../../animation/animatable.mdx#uid-1b3138f517) | Gets or sets the property transitions for the control. Inherited from [Animatable](../../animation/animatable.mdx). |
| [Dispatcher](../../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |
| [Item](../../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-ae5de60c49"></span>

### CanHorizontallyScroll Property

Gets or sets a value indicating whether the content can be scrolled horizontally.

```csharp
public bool CanHorizontallyScroll { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5b5a26fdfa"></span>

### CanVerticallyScroll Property

Gets or sets a value indicating whether the content can be scrolled vertically.

```csharp
public bool CanVerticallyScroll { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-543f53394e"></span>

### IsScrollInertiaEnabled Property

Gets or sets whether the gesture should include inertia in it's behavior.

```csharp
public bool IsScrollInertiaEnabled { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2fd9b73f38"></span>

### ScrollStartDistance Property

Gets or sets a value indicating the distance the pointer moves before scrolling is started

```csharp
public int ScrollStartDistance { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [CanHorizontallyScrollProperty](#uid-f27254627e) | Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanHorizontallyScroll](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanHorizontallyScroll) property. |
| [CanVerticallyScrollProperty](#uid-ef6b25aaf5) | Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanVerticallyScroll](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanVerticallyScroll) property. |
| [InertialResistance](#uid-2778e7614c) | No summary available. |
| [IsScrollInertiaEnabledProperty](#uid-87e5d3d576) | Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.IsScrollInertiaEnabled](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.IsScrollInertiaEnabled) property. |
| [ScrollStartDistanceProperty](#uid-902ef056a3) | Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.ScrollStartDistance](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.ScrollStartDistance) property. |
| [DataContextProperty](../../styledelement.mdx#uid-7eefabb929) | Defines the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [NameProperty](../../styledelement.mdx#uid-bcdbb9de56) | Defines the [Avalonia.StyledElement.Name](xref:Avalonia.StyledElement.Name) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [ParentProperty](../../styledelement.mdx#uid-dc6481a488) | Defines the [Avalonia.StyledElement.Parent](xref:Avalonia.StyledElement.Parent) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [TemplatedParentProperty](../../styledelement.mdx#uid-a2c7149a6b) | Defines the [Avalonia.StyledElement.TemplatedParent](xref:Avalonia.StyledElement.TemplatedParent) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [ThemeProperty](../../styledelement.mdx#uid-05852d7b9a) | Defines the [Avalonia.StyledElement.Theme](xref:Avalonia.StyledElement.Theme) property. Inherited from [StyledElement](../../styledelement.mdx). |
| [TransitionsProperty](../../animation/animatable.mdx#uid-c79f18fac2) | Defines the [Avalonia.Animation.Animatable.Transitions](xref:Avalonia.Animation.Animatable.Transitions) property. Inherited from [Animatable](../../animation/animatable.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-f27254627e"></span>

### CanHorizontallyScrollProperty Field

Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanHorizontallyScroll](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanHorizontallyScroll) property.

```csharp
public Avalonia.DirectProperty<TOwner,TValue><Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer, bool> CanHorizontallyScrollProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ef6b25aaf5"></span>

### CanVerticallyScrollProperty Field

Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanVerticallyScroll](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.CanVerticallyScroll) property.

```csharp
public Avalonia.DirectProperty<TOwner,TValue><Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer, bool> CanVerticallyScrollProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2778e7614c"></span>

### InertialResistance Field

```csharp
public double InertialResistance
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-87e5d3d576"></span>

### IsScrollInertiaEnabledProperty Field

Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.IsScrollInertiaEnabled](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.IsScrollInertiaEnabled) property.

```csharp
public Avalonia.DirectProperty<TOwner,TValue><Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer, bool> IsScrollInertiaEnabledProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-902ef056a3"></span>

### ScrollStartDistanceProperty Field

Defines the [Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.ScrollStartDistance](xref:Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer.ScrollStartDistance) property.

```csharp
public Avalonia.DirectProperty<TOwner,TValue><Avalonia.Input.GestureRecognizers.ScrollGestureRecognizer, int> ScrollStartDistanceProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [ActualThemeVariantChanged](../../styledelement.mdx#uid-e69ef27e71) | Raised when the theme variant is changed on the element or an ancestor of the element. Inherited from [StyledElement](../../styledelement.mdx). |
| [AttachedToLogicalTree](../../styledelement.mdx#uid-717aa68e85) | Raised when the styled element is attached to a rooted logical tree. Inherited from [StyledElement](../../styledelement.mdx). |
| [DataContextChanged](../../styledelement.mdx#uid-4b1cc873f8) | Occurs when the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property changes. Inherited from [StyledElement](../../styledelement.mdx). |
| [DetachedFromLogicalTree](../../styledelement.mdx#uid-d9f5afa535) | Raised when the styled element is detached from a rooted logical tree. Inherited from [StyledElement](../../styledelement.mdx). |
| [Initialized](../../styledelement.mdx#uid-bd6a5e5c0e) | Occurs when the styled element has finished initialization. Inherited from [StyledElement](../../styledelement.mdx). |
| [ResourcesChanged](../../styledelement.mdx#uid-99a7f47c56) | Occurs when a resource in this styled element or a parent styled element has changed. Inherited from [StyledElement](../../styledelement.mdx). |
| [PropertyChanged](../../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../../avaloniaobject.mdx). |

</ApiRefPage>

